<resources>
    <string name="app_name">SIMePKWB</string>
    <string name="long_name">Sistem Informasi Manajemen eParkir Kota Wisata Batu</string>
    <string name="long_name_first">Sistem Informasi Manajemen</string>
    <string name="long_name_second">eParkir</string>
    <string name="long_name_third">Kota Wisata Batu</string>
    <string name="action_settings">Pengaturan</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment">Halaman Masuk</string>
    <string name="main_screen">Halaman Utama</string>
    <string name="bt_screen">Halaman Bluetooth</string>
    <string name="next">Selanjutnya</string>
    <string name="previous">Sebelumnya</string>

    <string name="label_connecting">Menyambungkan</string>
    <string name="device_name">Nama Device</string>
    <string name="device_address">Alamat Device</string>
    <string name="id_jukir">ID Jukir</string>
    <string name="password">Kata Kunci</string>
    <string name="sign_in">Masuk</string>
    <string name="label_total">TOTAL TRANSAKSI HARI INI</string>
    <string name="pendapatan">PENDAPATAN</string>
    <string name="karcis">KARCIS</string>
    <string name="parkir_masuk">Parkir Masuk</string>
    <string name="parkir_keluar">Parkir Keluar</string>
    <string name="detail_parkir">Detail Parkir</string>
    <string name="label_username">JUKIR DEV</string>
    <string name="label_dinas">DISHUB BATU</string>
    <string name="label_address">JL ALUN ALUN</string>
    <string name="checkin_screen">Checkin Fragment</string>
    <string name="connect_printer">Connect Printer</string>
    <string name="log_out">Keluar</string>
    <string name="plat_nomor">Plat Nomor</string>
    <string name="pilih_jenis_kendaraan">Pilih Jenis Kendaraan</string>
    <string name="motor">MOTOR</string>
    <string name="mobil">MOBIL</string>
    <string name="bus_mini">BUS MINI</string>
    <string name="bus_besar">BUS BESAR</string>
    <string name="recorded">Tersimpan</string>
    <string name="about_simepkwb">Tentang SIMePKWB</string>
    <string name="todo">TODO</string>
    <string name="detail_karcis">Detail Karcis</string>

    <string name="print_title">Karcis Parkir</string>
    <string name="print_date">Tanggal</string>
    <string name="print_time_in">Jam Masuk</string>
    <string name="print_time_out">Jam Keluar</string>
    <string name="print_vehicle">Kendaraan</string>
    <string name="print_ticket_number">Nomor Tiket</string>
    <string name="print_platno">Plat Nomor</string>
    <string name="print_price">Harga</string>
    <string name="print_duration">Durasi</string>
    <string name="print_jukir_id">ID Jukir</string>
    <string name="print_jukir_name">Nama Jukir</string>
    <string name="print_jukir_location">Lokasi</string>
    <string name="bayar">BAYAR</string>
    <string name="cash">CASH</string>
    <string name="qris">QRIS</string>
    <string name="tapcash">TAPCASH</string>

    <string name="bluetooth_status">Bluetooth Status</string>
    <string name="bluetooth_status_connected">Connected</string>
    <string name="bluetooth_status_disconnected">Disconnected</string>
    <string name="databumi">Copyright©Databumi.id</string>
    <string name="cdIclogo">icLogo</string>
    <string name="label_connect">Bluetooth Status: Connected</string>
    <string name="print">CETAK</string>
    <string name="scan_qr_here">Scan QR Here</string>
    <string name="check_payment">Check Payment</string>
    <string name="status_payment">Status Payment :</string>
    <string name="unpaid">UNPAID</string>
    <string name="paid">PAID</string>
    <string name="logo_qris">Logo Qris</string>
    <string name="karcis_hilang">Karcis Hilang</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="foto_ktp">Foto KTP</string>
    <string name="bill_number">Bill Number</string>
</resources>