<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginFragment">

    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.mhandharbeni.e_parking.fragments.LoginFragment"
        android:label="@string/login_fragment"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_main"
            app:destination="@id/MainFragment"
            app:popUpTo="@id/LoginFragment"
            app:popUpToInclusive="true"
            />
    </fragment>
    <fragment
        android:id="@+id/MainFragment"
        android:name="com.mhandharbeni.e_parking.fragments.MainFragment"
        android:label="@string/main_screen"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_main_to_checkin"
            app:destination="@id/CheckinFragment"/>
        <action
            android:id="@+id/action_main_to_login"
            app:destination="@id/LoginFragment"
            app:popUpTo="@id/MainFragment"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_main_to_bt"
            app:destination="@id/BluetoothFragment"/>
    </fragment>
    <fragment
        android:id="@+id/BluetoothFragment"
        android:name="com.mhandharbeni.e_parking.fragments.BluetoothFragment"
        android:label="@string/bt_screen"
        tools:layout="@layout/fragment_bluetooth">
        <action
            android:id="@+id/action_bt_to_main"
            app:destination="@id/MainFragment"
            app:popUpTo="@id/MainFragment"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/CheckinFragment"
        android:name="com.mhandharbeni.e_parking.fragments.CheckinFragment"
        android:label="@string/checkin_screen"
        tools:layout="@layout/fragment_checkin">
        <action
            android:id="@+id/action_checkin_to_main"
            app:destination="@id/MainFragment"
            app:popUpTo="@id/CheckinFragment"
            app:popUpToInclusive="true"/>
    </fragment>
</navigation>