<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:textColor="@color/white"
            android:id="@+id/btnBt"
            style="@style/Widget.Material3.Button.TextButton"
            android:textSize="15sp"
            android:text="@string/connect_printer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButton
            android:textColor="@color/white"
            android:id="@+id/btnLogout"
            style="@style/Widget.Material3.Button.TextButton"
            android:textSize="15sp"
            android:text="@string/log_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButton
            android:textColor="@color/white"
            android:id="@+id/btnAbout"
            style="@style/Widget.Material3.Button.TextButton"
            android:textSize="15sp"
            android:text="@string/about_simepkwb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>