<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary3"
    tools:context=".fragments.LoginFragment">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_margin="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:id="@+id/imgLogo"
            android:src="@drawable/logo_kota_batu"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/cdIclogo" />

        <TextView
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomEnd="0dp"
            app:boxCornerRadiusBottomStart="0dp"
            android:minHeight="70dp"
            app:counterEnabled="false"
            app:counterMaxLength="11"
            app:endIconMode="clear_text"
            android:id="@+id/edtIdJukir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="true"
            android:hint="@string/id_jukir">

            <com.google.android.material.textfield.TextInputEditText
                android:nextFocusDown="@id/edtPassword"
                android:inputType="text"
                android:ellipsize="end"
                android:scrollHorizontally="true"
                android:imeOptions="actionNext"
                android:lines="1"
                android:maxLines="1"
                android:maxEms="20"
                android:minHeight="70dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:boxCornerRadiusTopStart="0dp"
            app:boxCornerRadiusTopEnd="0dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            android:minHeight="70dp"
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:hintAnimationEnabled="true"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:ellipsize="end"
                android:scrollHorizontally="true"
                android:lines="1"
                android:maxEms="20"
                android:imeOptions="actionDone"
                android:minHeight="70dp"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:imeOptions="actionGo"
            android:id="@+id/btnLogin"
            android:textSize="20sp"
            android:text="@string/sign_in"
            android:layout_gravity="center"
            android:gravity="center"
            android:minHeight="70dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <com.google.android.material.textview.MaterialTextView
        android:textSize="15sp"
        android:textColor="@color/white"
        app:lineHeight="10dp"
        android:lineHeight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/databumi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:targetApi="p" />
</androidx.constraintlayout.widget.ConstraintLayout>