<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView app:cardPreventCornerOverlap="false"
    app:cardBackgroundColor="@color/colorPrimary1"
    android:background="@color/colorPrimary1"
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/header"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_margin="16dp"
        android:background="@color/colorPrimary1"
        android:weightSum="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:weightSum="0.9"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="0.2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textview.MaterialTextView
                android:textColor="@color/white"
                android:layout_weight="0.3"
                android:id="@+id/edtUsername"
                android:text="@string/label_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <com.google.android.material.textview.MaterialTextView
                android:textColor="@color/white"
                android:layout_weight="0.3"
                android:id="@+id/edtDinas"
                android:text="@string/label_dinas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <com.google.android.material.textview.MaterialTextView
                android:textColor="@color/white"
                android:layout_weight="0.3"
                android:id="@+id/edtAddress"
                android:text="@string/label_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/profile"
            android:src="@drawable/ic_account_box"
            android:layout_weight="0.8"
            android:layout_width="match_parent"
            android:layout_height="100dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</com.google.android.material.card.MaterialCardView>