<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainFragment">

    <include layout="@layout/layout_header"
        android:id="@+id/header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <include layout="@layout/layout_user"
        android:id="@+id/user"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/panelTransaksi"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/user"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="18sp"
            android:lineHeight="120dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/label_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UnusedAttribute" />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:weightSum="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.card.MaterialCardView
                android:layout_marginEnd="2dp"
                android:layout_weight="0.5"
                app:cardPreventCornerOverlap="false"
                app:cardBackgroundColor="@color/colorPrimary2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textview.MaterialTextView
                        android:textColor="@color/white"
                        android:text="@string/pendapatan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_gravity="end"
                        android:gravity="end"
                        android:id="@+id/edtPendapatan"
                        android:textColor="@color/white"
                        android:text="50.000"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="HardcodedText" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_marginStart="2dp"
                android:layout_weight="0.5"
                app:cardPreventCornerOverlap="false"
                app:cardBackgroundColor="@color/colorPrimary2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textview.MaterialTextView
                        android:textColor="@color/white"
                        android:text="@string/karcis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_gravity="end"
                        android:gravity="end"
                        android:id="@+id/edtKarcis"
                        android:textColor="@color/white"
                        android:text="50.000"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="HardcodedText" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.card.MaterialCardView>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/panelTransaksi"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCheckin"
            android:minHeight="55dp"
            android:drawableStart="@drawable/ic_checkin"
            android:textColor="@color/white"
            android:text="@string/parkir_masuk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCheckout"
            android:minHeight="55dp"
            android:drawableStart="@drawable/ic_checkin"
            android:textColor="@color/white"
            android:text="@string/parkir_keluar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDetail"
            android:minHeight="55dp"
            android:drawableStart="@drawable/ic_detail"
            android:textColor="@color/white"
            android:text="@string/detail_parkir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>